inserting MOV logo

--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -122,9 +122,10 @@
 
     \end{block}
 
+    \vspace{3.2cm}
     %------------------------------------------------
     % \begin{center}
-    \includegraphics[width=0.7\linewidth]{msllogo.jpg}
+    \includegraphics[width=0.9\linewidth]{metoceanview2.jpg}
     % \end{center}
 
     %----------------------------------------------------------------------------------------
@@ -326,11 +327,11 @@
 
     \vspace{3.2cm}
 
-    \begin{flushright}
+    \begin{center}
     % \begin{tabular}{ccc}
     \includegraphics[width=0.7\linewidth]{msllogo.jpg}
     % \end{tabular}
-    \end{flushright}
+    \end{center}
 
     %----------------------------------------------------------------------------------------
 
